unpackaged/main/default/objects/fferpcore__SlackChannelInviteEvent__e/fferpcore__SlackChannelInviteEvent__e.object-meta.xml
<CustomObject>
    <description>Tracks member changes for related Slack channels.</description>
    <label>Slack Channel Member Event</label>
    <pluralLabel>Slack Channel Member Events</pluralLabel>
</CustomObject>