unpackaged/main/default/objects/fferpcore__SlackChannelInviteEvent__e/fields/fferpcore__ChannelId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ChannelId__c</fullName>
    <description>The identifier for the Slack channel.</description>
    <label>Channel ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>