unpackaged/main/default/objects/fferpcore__SlackChannelInviteEvent__e/fields/fferpcore__Invited__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Invited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, indicates that the specified users have been added to the Slack channel. If deselected, indicates that the specified users have been removed from the channel.</description>
    <label>Added to Channel</label>
    <type>Checkbox</type>
</CustomField>