unpackaged/main/default/objects/fferpcore__SlackChannelInviteEvent__e/fields/fferpcore__Ok__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Ok__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the event was successful.</description>
    <label>OK</label>
    <type>Checkbox</type>
</CustomField>