unpackaged/main/default/objects/fferpcore__SlackChannelInviteEvent__e/fields/fferpcore__SalesforceObjectId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SalesforceObjectId__c</fullName>
    <description>The identifier for the Salesforce record.</description>
    <label>Salesforce Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>