unpackaged/main/default/objects/fferpcore__SlackChannelInviteEvent__e/fields/fferpcore__SalesforceUserIds__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__SalesforceUserIds__c</fullName>
    <description>The list of users who have been added to or removed from the Slack channel.</description>
    <label>Salesforce User IDs</label>
    <length>650</length>
    <type>LongTextArea</type>
</CustomField>